15.5. Builder task - create bigmac